--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ color : orange; opacity : 0.8; transition: opacity 0.5s ease;
 	height : 300px;
 	margin : 0px auto;
 }
+.img-circle {
+	border-radius: 50%;
 }
 @media (max-width: 960px) {
 	.container {
